LU-19601 ldlm: add extra to recovery timer

on 5.14 kernels a timer callback can start before scheduled
expiration:
[  107.001859] TIMER expires at 107000000000, now 106963066283
this can lead to a missed recovery abort event and servers
stuck in infinite recovery.
add extra 0.5 seconds to work this around.

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I179c13e35b03f620dd4a31ce2b7ac466d8f003e0
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62568
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>